Finally finished text corrections! Now for figures.

--- a/problems/probsol5.tex
+++ b/problems/probsol5.tex
@@ -187,7 +187,7 @@ where $v_K = \sqrt{GM/\varpi}$ is the Keplerian velocity. If we solve this for $
 \begin{eqnarray*}
 \Delta v = v_K - v_g & = & v_K - \sqrt{v_K^2 - n c_g^2} \\
 & = & v_K \left(1 - \sqrt{1 - \frac{n c_g^2}{v_K^2}}\right) \\
-& \approx & \frac{n c_g^2}{2 v_K^2},
+& \approx & \frac{n c_g^2}{2 v_K},
 \end{eqnarray*}
 where the last step results from taking the Taylor expansion of the square root term in the limit $nc_g^2 \ll v_K^2$, which is equivalent to the assumption that the deviation from Keplerian rotation is small.
 
