fix two minor typos, one a link to starburst99 and one the name of starburst99

--- a/problems/probset1.tex
+++ b/problems/probset1.tex
@@ -14,7 +14,7 @@ Here we will derive a definition of the critical density, and use it to compute 
 \vspace{0.2in}
 
 \item \textbf{Infrared Luminosity as a Star Formation Rate Tracer.}\\
-We use a variety of indirect indicators to measure the star formation rate in galaxies, and one of the most common is to measure the galaxy's infrared luminosity. The underlying assumptions behind this method are that (1) most of the total radiant output in the galaxy comes from young, recently formed stars, and (2) that in a sufficiently dusty galaxy most of the starlight will be absorbed by dust grains within the galaxy and then re-radiated in the infrared. We will explore how well this conversion works using the popular stellar population synthesis package Starburst99 \citep{leitherer99a, vazquez05a}, \url{http://www.stsci.edu/~science/starburst99}.
+We use a variety of indirect indicators to measure the star formation rate in galaxies, and one of the most common is to measure the galaxy's infrared luminosity. The underlying assumptions behind this method are that (1) most of the total radiant output in the galaxy comes from young, recently formed stars, and (2) that in a sufficiently dusty galaxy most of the starlight will be absorbed by dust grains within the galaxy and then re-radiated in the infrared. We will explore how well this conversion works using the popular stellar population synthesis package Starburst99 \citep{leitherer99a, vazquez05a}, \url{http://www.stsci.edu/science/starburst99/}.
 \begin{enumerate}
 \item Once you have read enough of the papers to figure out what Starburst99 does, use it with the default parameters to compute the total luminosity of a stellar population in which star formation occurs continuously at a fixed rate $\dot{M}_*$. What is the ratio of $L_{\rm tot}/\dot{M}_*$ after 10 Myr? After 100 Myr? After 1 Gyr? Compare these ratios to the conversion factor between $L_{\rm TIR}$ and $\dot{M}_*$ given in Table 1 of \citet{kennicutt12a}\footnote{\href{http://adsabs.harvard.edu/abs/2012ARA\%26A..50..531K}{Kennicutt \& Evans, 2012, ARA\&A, 50, 531}}.
 \item Plot $L_{\rm tot}/\dot{M}_*$ as a function of time for this population. Based on this plot, how old does a stellar population have to be before $L_{\rm TIR}$ becomes a good tracer of the total star formation rate?
