--- a/problems/probsol1.tex
+++ b/problems/probsol1.tex
@@ -85,7 +85,7 @@ Luminosity normalized by star formation rate for a normal IMF (solid line) and a
 }
 \end{figure}
 
-\item To generate this IMF, I told starbust99 to use a 1 section IMF with a slope of $-2.3$ running from 0.5 to 100 $\msun$. At equal ages, the numbers change to
+\item To generate this IMF, I told starburst99 to use a 1 section IMF with a slope of $-2.3$ running from 0.5 to 100 $\msun$. At equal ages, the numbers change to
 \begin{eqnarray*}
 \mbox{SFR}[\msun\mbox{ yr}^{-1}] & = & 3.2\times 10^{-44} L_{\rm tot}[\mbox{erg s}^{-1}]\qquad\mbox{(10 Myr)} \\
 \mbox{SFR}[\msun\mbox{ yr}^{-1}] & = & 2.1\times 10^{-44} L_{\rm tot}[\mbox{erg s}^{-1}]\qquad\mbox{(100 Myr)} \\
