applying smallcaps to a URL causes a Latex memory error. Checked with Mark that this can be removed.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -184,7 +184,7 @@ Original version: \the\year\ \thanklessauthor
 
 \par\smallcaps{Published as part of the Open Astrophysics Bookshelf}
 
-\par\smallcaps{\url{http://open-astrophysics-bookshelf.github.io/}}
+\par{\url{http://open-astrophysics-bookshelf.github.io/}}
 
 \par Licensed under the Creative Commons 1.0 Universal License, \url{http://creativecommons.org/publicdomain/zero/1.0/}.\index{license}
 
