Fixing path to bib style file

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -302,7 +302,7 @@ In addition to the text and reading, this book contains five problem sets, which
 %----------------------------------------------------------------------------------------
 
 \bibliography{bib/refs} % Use the bibliography.bib file for the bibliography
-\bibliographystyle{apj}
+\bibliographystyle{tex/apj}
 
 %----------------------------------------------------------------------------------------
 
